--- a/stubs/resources/views/shop/product/default/_price.antlers.html
+++ b/stubs/resources/views/shop/product/default/_price.antlers.html
@@ -1,23 +1,61 @@
-<div class="flex flex-col">
-    {{ gaia:product:price }}
-        {{ if {gaia:product:single} }}
-            {{ if is_discounted }}
-                <span class="block mt-2 text-3xl font-medium text-red-600">Now {{ gaia:currency :price="min_discounted_price" }}</span>
-                <div class="flex items-center mt-2">
-                    <span class="text-sm text-slate-500">Was {{ gaia:currency :price="min_regular_price" }}</span>
-                    {{ if (discount_percentage <= '5') }} 
-                        <span class="p-1 ml-2 text-sm text-red-600 rounded-xs">(-{{ gaia:currency :price="discount_amount" }})</span>
-                    {{ else }}
-                        <span class="p-1 ml-2 text-sm font-medium text-red-600 rounded-xs">(-{{ discount_percentage | floor }}%)</span>
-                    {{ /if }}
-                </div>
-            {{ /else }}
-                <span class="block mt-2 text-3xl" >{{ gaia:currency :price="min_price" }}</span>
+<div class="flex flex-col" x-data="productPrice()">
+    <span x-show="! show">
+        {{ gaia:product:price }}
+            {{ if {gaia:product:single} }}
+                {{ if is_discounted }}
+                    <span class="block mt-2 text-3xl font-medium text-red-600">Now {{ gaia:currency :price="min_discounted_price" }}</span>
+                    <div class="flex items-center mt-2">
+                        <span class="text-sm text-slate-500">Was {{ gaia:currency :price="min_regular_price" }}</span>
+                        {{ if (discount_percentage <= '5') }} 
+                            <span class="p-1 ml-2 text-sm text-red-600 rounded-xs">(-{{ gaia:currency :price="discount_amount" }})</span>
+                        {{ else }}
+                            <span class="p-1 ml-2 text-sm font-medium text-red-600 rounded-xs">(-{{ discount_percentage | floor }}%)</span>
+                        {{ /if }}
+                    </div>
+                {{ /else }}
+                    <span class="block mt-2 text-3xl" >{{ gaia:currency :price="min_price" }}</span>
+                {{ /if }}
             {{ /if }}
-        {{ /if }}
 
-        {{ if {gaia:product:configurable} }}
-            <span class="block mt-2 text-3xl">From {{ gaia:currency :price="min_price" }}</span>
-        {{ /if }}
-    {{ /gaia:product:price }}
+            {{ if {gaia:product:configurable} }}
+                <span class="block mt-2 text-3xl">From {{ gaia:currency :price="min_price" }}</span>
+            {{ /if }}
+        {{ /gaia:product:price }}            
+    </span>
+
+    {{ if {gaia:product:configurable} }}
+        <span x-show="show" x-cloak>
+            <template x-if="$store.product.priceTable.isDiscounted">
+                <div>
+                    <span class="block mt-2 text-3xl font-medium text-red-600">Now <span x-text="$store.product.priceTable.formattedMinPrice"></span></span>
+                    <div class="flex items-center mt-2">
+                        <span class="text-sm text-slate-500">Was <span x-text="$store.product.priceTable.formattedMaxPrice"></span></span>
+                        <span class="p-1 ml-2 text-sm font-medium text-red-600 rounded-xs">
+                            (-<span x-text="$store.product.priceTable.discountPercentage"></span>%)
+                        </span>
+                    </div>
+                </div>
+            </template>
+            
+            <template x-if="(! $store.product.priceTable.isDiscounted) && ($store.product.areAllOptionsSelected)">
+                <span class="block mt-2 text-3xl" x-text="$store.product.priceTable.formattedMinPrice"></span>
+            </template>
+
+            <span x-show="! $store.product.areAllOptionsSelected" class="block mt-2 text-3xl">From <span x-text="$store.product.priceTable.formattedMinPrice"></span>
+        </span>
+    {{ /if }}
 </div>
+
+<script>
+    function productPrice() {
+        return {
+            show: false,
+            init() {
+                // Once the product options are changed then show the new prices
+                this.$watch('$store.product.selectedOptions', value => {
+                    this.show = true;
+                });
+            }
+        }
+    }
+</script>
